# Course-Management-Application

./: Dockerfile  README.md  docker-compose.yml  models.py  pyproject.toml
src/: api.py  async_database.py  config.py  generate_data.py  lifespan.py  main.py  models.py  person_router.py  schemas.py
src/api/: api.py
src/api/modules/instructor/: endpoints.py  router.py
src/api/modules/person/: endpoints.py  router.py
src/api/modules/student/: endpoints.py  router.py
src/database/: __init__.py  async_database.py  schemas.py  utilities.py
